[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Misc/NORMALNEW.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/Levl3Resources/DirtFloor.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Resources/Misc/Minecraft.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Resources/Levl3Resources/SUN.png" type="Texture" id=7]
[ext_resource path="res://Resources/Misc/Block.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/Misc/HOVERNEW.tres" type="StyleBox" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 352, 192, 0, 192, 0, 0, 352, 0 )

[sub_resource type="TileSet" id=2]
0/name = "DirtFloor.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 288, 416, 352, 192 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "SUN.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, 224, 576, 224 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "SUN.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 160, 224, 608, 224 )
2/tile_mode = 1
2/autotile/bitmask_mode = 0
2/autotile/bitmask_flags = [  ]
2/autotile/icon_coordinate = Vector2( 16, 4 )
2/autotile/tile_size = Vector2( 32, 32 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Block.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 960, 160, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 6 )

[node name="Screen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="ColorRect" parent="."]
margin_top = -1.0
margin_right = 1278.0
margin_bottom = 642.0
color = Color( 0.101961, 0.713726, 0.760784, 1 )

[node name="TextureRect" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 327680, 3, 0, 327685, 3, 0, 327694, 3, 0, 327699, 3, 0, 393216, 3, 0, 393218, 3, 0, 393219, 3, 0, 393221, 3, 0, 393230, 3, 0, 393232, 3, 0, 393233, 3, 0, 393235, 3, 0, 458752, 3, 0, 458754, 3, 0, 458757, 3, 0, 458766, 3, 0, 458769, 3, 0, 458771, 3, 0, 524288, 3, 0, 524290, 3, 0, 524292, 3, 0, 524293, 3, 0, 524302, 3, 0, 524303, 3, 0, 524305, 3, 0, 524307, 3, 0, 589824, 3, 0, 589826, 3, 0, 589841, 3, 0, 589843, 3, 0, 655360, 0, 0, 655365, 0, 0, 655370, 0, 0, 655375, 0, 0 )

[node name="Control" type="Control" parent="."]
margin_top = -1.18921
margin_right = 40.0
margin_bottom = 38.8108
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 440.0
margin_top = 200.0
margin_right = 729.0
margin_bottom = 296.0
rect_scale = Vector2( 1.12031, 1 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 440.0
margin_top = 310.0
margin_right = 729.0
margin_bottom = 406.0
rect_scale = Vector2( 1.12031, 1 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "INSTRUCTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 440.0
margin_top = 420.0
margin_right = 729.0
margin_bottom = 516.0
rect_scale = Vector2( 1.12031, 1 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control"]
margin_left = 9.0
margin_top = 136.0
margin_right = 1283.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 4 )
text = "ESCAPE THE MAZE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sun" type="TextureRect" parent="."]
margin_left = -120.174
margin_top = -159.245
margin_right = 903.826
margin_bottom = 864.755
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin2" parent="." instance=ExtResource( 9 )]
position = Vector2( 926.392, 112.975 )
[connection signal="pressed" from="Control/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/Instruction" to="." method="_on_Instruction_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_Quit_pressed"]
